--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
         value="0"
       />
     </div>
-    <div class="color-code">RGB(10, 20, 30)</div>
+    <div class="color-code"></div>
+    <div class="color-hex"></div>
     <input type="button" class="button-random" value="Random Color" />
+
     <script src="scripts/maindscript.js"></script>
   </body>
 </html>
